--- a/.gitignore
+++ b/.gitignore
@@ -1,62 +1,50 @@
-# Dependencies
-node_modules/
-backend/node_modules/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
 # Environment variables
-backend/.env
 .env
 .env.local
 .env.production
+.env.development
+.env.*.local
 
-# Build outputs
-dist/
-build/
-*.log
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Temporary files
-*.tmp
-*.temp
+# Backend
+backend/.env
+backend/node_modules
 
 # Database
 *.sql.backup
 *.db
 
-# Logs
-logs/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Build outputs
+build/
+dist/
 
-# Coverage
-coverage/
-.nyc_output/
+# OS
+Thumbs.db
+.DS_Store
 
-# Misc
-.cache/
-.temp/
-
-# Design source files
-*.psd
-*.ai
-*.sketch
-*.fig
-
-# Credentials (if exists)
-CREDENTIALS.md
-credentials.md
-*.credentials.md
-
-# Visual Studio
+# VS Code
 .vs/
