--- a/backend/env.example
+++ b/backend/env.example
@@ -10,15 +10,15 @@ JWT_SECRET=your-super-secret-jwt-key-here
 # Email Configuration
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
-SMTP_FROM=noreply@pcpartpicker.com
-ADMIN_EMAIL=admin@pcpartpicker.com
+SMTP_USER=pcbuilderassist@gmail.com
+SMTP_PASS=your-16-character-app-password-here
+SMTP_FROM=pcbuilderassist@gmail.com
+ADMIN_EMAIL=pcbuilderassist@gmail.com
 
 # Server Configuration
 PORT=5000
 NODE_ENV=development
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:3002
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
