--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "jest",
     "setup-db": "node setup-database.js",
-    "reset-admin": "node reset-admin-password.js"
+    "reset-admin": "node reset-admin-password.js",
+    "setup-email": "node setup-email.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -26,9 +26,7 @@
     "nodemailer": "^6.9.1"
   },
   "devDependencies": {
-    "jest": "^29.3.1",
-    "nodemon": "^2.0.20",
-    "supertest": "^6.3.3"
+    "nodemon": "^2.0.20"
   },
   "keywords": [
     "pc-builder",
